[gd_scene load_steps=4 format=3 uid="uid://bgob3k0tk53pk"]

[ext_resource type="Script" path="res://scripts/console.gd" id="1_c5ag6"]
[ext_resource type="Texture2D" uid="uid://vt8uaeq1tx6p" path="res://assets/console_icon.png" id="2_6v83x"]

[sub_resource type="LabelSettings" id="LabelSettings_37clm"]
font_size = 20

[node name="Console" type="Control"]
top_level = true
layout_mode = 3
anchor_right = 0.247
anchor_bottom = 0.44
offset_right = 0.455994
offset_bottom = -0.120026
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_c5ag6")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 286.0
offset_bottom = 285.0

[node name="App" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/App"]
layout_mode = 2
focus_mode = 2
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Panel/App/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_6v83x")
expand_mode = 2

[node name="Label" type="Label" parent="Panel/App/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " Console"
label_settings = SubResource("LabelSettings_37clm")

[node name="Hide" type="Button" parent="Panel/App/HBoxContainer"]
layout_mode = 2
disabled = true
text = " __ "

[node name="Wide" type="Button" parent="Panel/App/HBoxContainer"]
layout_mode = 2
disabled = true
text = " â–­ "

[node name="Exit" type="Button" parent="Panel/App/HBoxContainer"]
layout_mode = 2
text = "  x  "

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/App"]
layout_mode = 2
size_flags_vertical = 3

[node name="Text" type="TextEdit" parent="Panel/App/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false
selecting_enabled = false
caret_multiple = false
draw_spaces = true

[node name="LineEdit" type="LineEdit" parent="Panel/App/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[connection signal="pressed" from="Panel/App/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="Panel/App/VBoxContainer/LineEdit" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/App/VBoxContainer/LineEdit" to="." method="_on_mouse_exited"]
[connection signal="text_submitted" from="Panel/App/VBoxContainer/LineEdit" to="." method="_entered"]
